WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119665
REGRESSION (
r153877
): Plugin scanning slows creation of WebViews
https://bugs.webkit.org/show_bug.cgi?id=119665
Summary
REGRESSION (r153877): Plugin scanning slows creation of WebViews
Gustavo Noronha (kov)
Reported
2013-08-11 14:18:49 PDT
According to Tim Horton: "we should make it only-refresh-if-you-already-have-cached-data"
Attachments
patch
(3.93 KB, patch)
2013-08-13 16:15 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-08-12 14:05:12 PDT
This is easy for WebKit2 (just don't populatePluginCache() in refreshPlugins(), it'll happen later when it needs to). WebKit1 is another story entirely.
Radar WebKit Bug Importer
Comment 2
2013-08-12 14:31:24 PDT
<
rdar://problem/14716549
>
Tim Horton
Comment 3
2013-08-12 14:38:26 PDT
(In reply to
comment #1
)
> This is easy for WebKit2 (just don't populatePluginCache() in refreshPlugins(), it'll happen later when it needs to). WebKit1 is another story entirely.
Actually, if we have a dirty bit in WebPlatformStrategies.mm and have some way to tell if the plugin database has been initialized without initializing it, we could do this there without all the complication.
Tim Horton
Comment 4
2013-08-13 16:15:31 PDT
Created
attachment 208688
[details]
patch
WebKit Commit Bot
Comment 5
2013-08-14 13:20:02 PDT
Comment on
attachment 208688
[details]
patch Clearing flags on attachment: 208688 Committed
r154067
: <
http://trac.webkit.org/changeset/154067
>
WebKit Commit Bot
Comment 6
2013-08-14 13:20:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug