REGRESSION (r153877): Plugin scanning slows creation of WebViews https://bugs.webkit.org/show_bug.cgi?id=119665 <rdar://problem/14716549>

Reviewed by Darin Adler.

Source/WebKit/mac:

* Plugins/WebPluginDatabase.h:
* Plugins/WebPluginDatabase.mm:
(+[WebPluginDatabase sharedDatabaseIfExists]): Added.

* WebCoreSupport/WebPlatformStrategies.mm:
(WebPlatformStrategies::refreshPlugins):
Only refresh the plugin database if it's already been loaded.

Source/WebKit2:

* WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:
(WebKit::WebPlatformStrategies::refreshPlugins):
Don't repopulate the plugin cache in refreshPlugins, just invalidate it.
It will be repopulated the next time something tries to use it.


Canonical link: https://commits.webkit.org/137751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154067 268f45cc-cd09-0410-ab3c-d52691b4dbfc